<resources>
    <string name="app_name">Our Shopping List</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account? Create one</string>
    <string name="account_info">Account Info</string>
    <string name="change_item_ordering">Change item ordering</string>
    <string name="change_crossing_out_options">Change options for crossing off items</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="barcode">Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search">Search</string>
    <string name="enter_list_name">Enter a list name</string>
    <string name="enter_category_name">Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_category">Create Category</string>
    <string name="delete">Delete</string>
    <string name="delete_category_confirm">Are you sure you want to delete this Category?</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="delete_list_confirm">Are you sure you want to delete this List?</string>
</resources>
