<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_back"
        android:title="@string/back"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_new_category"
        android:title="@string/create_category"
        android:visible="false" />
    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:visible="false" />
</menu>